--- a/src/gem-serve-page/css/ServeApp.css
+++ b/src/gem-serve-page/css/ServeApp.css
@@ -15,13 +15,6 @@
   font-weight: 700;
 }
 
-/* .serveOp h3 {
-  font-size: 1.375rem;
-} */
-.serveOp h4 {
-  font-size: 0.8rem;
-}
-
 .serveOp p {
   font-size: 16px;
   font-weight: 200;
